--- a/src/app/weather-widget/weather-widget.component.css
+++ b/src/app/weather-widget/weather-widget.component.css
@@ -24,7 +24,7 @@
 }
 
 .search-button {
-  background-color: #87c1c1;
+  background-color: #c5c5c5;
   border: none;
   border-radius: 0 5px 5px 0;
   padding: 10px;
