--- a/src/app/course/course.component.css
+++ b/src/app/course/course.component.css
@@ -20,24 +20,86 @@
 
 .course-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
   gap: 20px;
   max-height: 650px;
   padding-bottom: 20px;
   overflow-y: auto;
+  margin-top: 20px;
 }
 
 .mat-mdc-card {
   width: 100%;
-  height: 215px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   transition: transform 0.3s ease-in-out;
+  position: relative;
+  border-radius: 8px;
+  box-sizing: border-box;
+  margin: 10px;
+}
+
+.card-top {
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #000000;
+  font-size: 1.2em;
+  padding: 0 16px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+
+.todo-count-bubble {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  min-width: 20px;
+  height: 20px;
+  background-color: #ff0000;
+  color: #ffffff;
+  text-align: center;
+  line-height: 20px;
+  font-size: 12px;
+  border-radius: 50%;
+  z-index: 2;
+}
+
+.mat-mdc-card-header {
+  padding: 16px;
+}
+
+.mat-mdc-card-actions {
+  display: flex;
+  justify-content: space-around;
 }
 
 .mat-mdc-card:hover {
-  transform: scale(1.05);
+  transform: scale(1.02);
+}
+
+button.mat-icon-button {
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+button.mat-icon-button:hover::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 36px;
+  height: 36px;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.1);
+  pointer-events: none;
 }
 
 .mat-mdc-card-header .mat-mdc-card-subtitle,
@@ -49,18 +111,4 @@
 .mat-mdc-card:hover .mat-mdc-card-header .mat-mdc-card-subtitle,
 .mat-mdc-card:hover .mat-mdc-card-actions {
   visibility: visible;
-}
-
-.todo-count-bubble {
-  position: absolute;
-  top: 0;
-  right: 0;
-  min-width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background-color: #ff0000;
-  color: #ffffff;
-  text-align: center;
-  line-height: 20px;
-  font-size: 12px;
 }
