--- a/src/app/notes/notes.component.css
+++ b/src/app/notes/notes.component.css
@@ -14,7 +14,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 2px;
+  height: 1px;
   background-color: black;
 }
 
@@ -30,4 +30,25 @@
 .note-card {
   width: 100%;
   padding: 10px;
+}
+
+.note-card-content {
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+
+.note-card-content p {
+  margin: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  flex-grow: 1;
+}
+
+.more-text {
+  cursor: pointer;
+  color: blue;
+  white-space: nowrap;
+  margin-left: 5px;
 }
