Update von Kalender, Farbenänderung und Prüfungsdatumänderung wirken sich beim Kalender aus

--- a/src/app/calendar-widget/calendar-widget.component.html
+++ b/src/app/calendar-widget/calendar-widget.component.html
@@ -1,4 +1,4 @@
 <div class="calendar">
-  <mat-calendar [dateClass]="dateClass()" [selected]="selectedDate" (selectedChange)="openDialog($event)">
+  <mat-calendar [dateClass]="(dateClass() | async) ?? defaultDateClass" [selected]="selectedDate" (selectedChange)="openDialog($event)">
   </mat-calendar>
 </div>
