added license for frontend

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -23,5 +23,10 @@
     <app-grade-average></app-grade-average>
     <app-calendar-widget></app-calendar-widget>
     <app-weather-widget></app-weather-widget>
+    <footer style="position: relative; left: 200px; font-size: 0.7em;">
+      <p>Icons von
+        <a href="https://icons8.com/">Icons8</a>
+      </p>
+    </footer>
   </div>
 </div>
