--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -14,7 +14,7 @@
           <input matInput type="password" placeholder="Ihr Passwort" [(ngModel)]="password" name="password">
         </mat-form-field>
         <button type="submit" class="login-button">Registrieren</button>
-        <p class="register-text" (click)="goToLogin()">Ein Account vorhanden? Hier</p>
+        <p class="register-text" (click)="goToLogin()">Ein Account vorhanden? <a>Hier</a></p>
       </form>
     </mat-card-content>
   </mat-card>
