--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -65,5 +65,9 @@
 
 .register-text a {
   color: #0A84FF;
-  text-decoration: none;
+  cursor: pointer;
+}
+
+.register-text a:hover {
+  text-decoration: underline;
 }
