added title and changed background

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,5 @@
 <div class="login-container">
+  <h1 class="titleStudy">STUDYDASH</h1>
   <mat-card class="login-card">
     <mat-card-header>
       <mat-card-title>Login</mat-card-title>
