--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,9 @@
 <div class="dashboard">
   <div class="dashboard-header-container">
     <div class="dashboard-header" [ngStyle]="{'background-image': 'url(' + headerImage + ')'}">
+      <div class="header-title">
+        StudyDash
+      </div>
       <button mat-icon-button [matMenuTriggerFor]="menu">
         <mat-icon>menu</mat-icon>
       </button>
