--- a/src/app/consent-dialog/consent-dialog.component.html
+++ b/src/app/consent-dialog/consent-dialog.component.html
@@ -1,10 +1,12 @@
 <div mat-dialog-content>
-  <p>Liebe Nutzer, StudyDash ist ein Projekt im Rahmen des Moduls "Fallstudie: Software Engineering" an der IU Internationale Hochschule erstellt worden.
+  <p>Liebe Nutzer, StudyDash ist ein Projekt, welches im Rahmen des Moduls "Fallstudie: Software Engineering"
+    an der IU Internationale Hochschule erstellt worden ist.
     Ihre Daten, einschließlich Ihres Benutzernamens, Ihres verschlüsselten Passworts,
     Ihrer To-Dos und aller anderen Funktionen, werden in einer Datenbank gespeichert.
-    Zusätzlich werden im LocalStorage Ihres Browsers ein Autorisierungstoken und ein
+    Zusätzlich werden im LocalStorage Ihres Browsers ein Autorisierungstoken und ein von Ihnen ausgewähltes
     Bild für den Header gespeichert. Durch die Nutzung dieser Anwendung stimmen Sie der Speicherung
-    und Verarbeitung dieser Daten zu.</p>
+    und Verarbeitung dieser Daten zu. Wenn Sie der Speicherung und Verarbeitung nicht zustimmen,
+    bitten wir Sie die Seite zu verlassen.</p>
 </div>
 <div mat-dialog-actions>
   <button mat-button [mat-dialog-close]="true">Zustimmen</button>
